fixed logo swatch anim

--- a/index.html
+++ b/index.html
@@ -40,12 +40,10 @@
     <nav id="mainNav" class="navbar navbar-default navbar-custom navbar-fixed-top">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
-            <a class="navbar-brand page-scroll" href="#page-top">
-              <div class="logo_overlay">
+            <a class="navbar-brand page-scroll" style="margin:0;" href="#page-top">
+              <!-- <div class="logo_overlay">
 
-                  <div class="logo_overlay_text">CIRCLES</div>
-
-              </div>
+              </div> -->
             </a>
             <div class="navbar-header page-scroll">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
